src/App.css
main    {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;

	background: linear-gradient(to right, #fff, #5e6b77);
	/* background: linear-gradient(to right, #5c9ee6, #468fd3); */
}

/* player */
.player {
	position: -webkit-sticky;
	position: sticky;
	bottom: 0;
	/* position: relative; */
	height: 400px;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	background: linear-gradient(to right, #5D6D7E, #566573);
	box-shadow: 1px 0px 10px 6px rgba(240,240,240,0.2);
}

.player #logo {
	position: absolute;
	top: 10px;
	left: 30px;
	font-size: 25px;
	color: #ccc;
}

.player #logo span {
	margin-right: 15px;
}

/* left & right part */
.right, .left {
    position: relative;
	height: 100%;
	width: 50%;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

/* song image */
.left .image-track-container {
	height: 250px;
	width: 250px;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2);
}
.left img {
    /* height: 300px;
	width: 80%;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2); */
	height: 100%;
	width: 100%;
	border-radius: 15px;
	box-shadow: 1px 0px 20px 12px rgba(240,240,240,0.2);
}

/* range slider */
input[type="range"] {
    -webkit-appearance: none;
    width: 50%;
	outline: none;
	height: 2px;
	margin: 0 15px;
}
input[type="range"]::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	height: 20px;
	width: 20px;
	background: #FF8A65;
	border-radius: 50%;
	cursor: pointer;
}
input[type="range"]::-moz-range-thumb {
	height: 20px;
	width: 20px;
	background: #FF8A65;
	border-radius: 50%;
	cursor: pointer;
}
.right input[type=range]{
	width: 40%;
}

/* volume part */
.left .volume {
    position: absolute;
	bottom: 7%;
	left: 0;
	width: 100%;
	height: 30px;
	display: flex;
	align-items: center;
	justify-content: center;
	color: #fff;
}
.left .volume p {
	font-size: 15px;
}
.left .volume span {
	cursor: pointer;
	padding: 8px 12px;
	background: #FF8A65;
}
.left .volume span:hover {
	background: rgba(245,245,245,0.1);
}
.volume #volume--show {
	padding: 8px 12px;
	margin: 0 5px 0 0;
	background: rgba(245,245,245,0.1);
}

/* right part */
.right .middle {
	margin-top: 100px;
	display: flex;
	justify-content: space-around;
	align-items: center;
	/* background-color: #2a2a2a; */
	width: 50%;
}
.right .middle button {
	border: none;
	height: 35px;
	width: 35px;
	border-radius: 50%;	
    display: flex;
	align-items: center;
	justify-content: center;
	cursor: pointer;
	outline: none;
	transition: 0.5s;
	background: rgba(255,255,255,0.1);
    color: #fff;
}
.right .middle button > span {
	font-size: 1rem;
	display: flex;
	justify-content: center;
	align-items: center;
}
.right #title {
	font-size: 35px;
	margin-bottom: 10px;
}
.right #artist {
	font-size: 18px;
}
.right .duration {
	position: absolute;
	bottom: 10%;
	left: 50%;
	transform: translateX(-50%);
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	height: 20px;
	margin-top: 40px;
}

/* .right .duration p {
	color: #fff;
	font-size: 15px;
	margin-left: 20px;
} */

#play {
	background: #FF8A65;
	height: 50px;
	width: 50px;
	font-size: 1.5rem;
}
.right button:hover {
	background: #FF8A65;
}
.right span::before {
	color: #fff;
	font-size: 20px;
}

.right .show_song_no {
    position: absolute;
    top: 10px;
    right: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
    color: #fff;
    border-radius: 5px;
    background: rgba(255,255,255,0.2);
}

.right .show_song_no p:nth-child(2){
	margin: 0 5px;
}

.song-info {
	text-transform: capitalize;
	color: #fff;
	text-align: center;
}


/* Visualyzer box */
.blur-img {
	filter: blur(30px);
}

.visualizer-box {
	display: flex;
	justify-content: center;
	align-items: center;
	filter: blur(5px) contrast(10);
	mix-blend-mode: screen;

	/* placing */
	position: absolute;
	left: 50%;
	top: 45%;
	transform: translate(-60%, -42%);
}

.visualizer-container {
	padding: 50px;
	background-color: #2a2a2a;
}

.visualizer {
	position: relative;
	width: 180px;
	height: 180px;
	border-radius: 50%;
	/* background-color: #fff; */
	transition: 0.5s;
	transform: rotateX(180deg);
}

.visualizer--innercircle {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 150px;
	height: 150px;
	background-color: #2a2a2a;
	border-radius: 50%;
	z-index: 10;
}

.visualyzer--element {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	display: inline-block;
	width: 40px;
	height: 40px;
	border-radius: 10px;
	border-top: 40px solid rgb(157, 171, 247);
	border-left: 20px solid transparent;
	border-right: 20px solid transparent;
	transform-origin: top left;
	transition: 0.25s;
}
/* end visualyzer box */

.hidden {
	display: none !important;
}

.bg-orange {
	background-color: #FF8A65 !important;
	color: #fff;
}
.bg-blue {
	background: linear-gradient(to right, #5D6D7E, rgb(157, 171, 247)) !important;
	color: #fff;
}
.bg-blue span {
	color: #fff;
}

.repeat-one {
	position: absolute;
	top: 5px;
	right: 4px;
	font-size: 0.6rem;
	font-weight: 900;
}

.duration--display {
	color: #fff;
}

/* playlist */
.playlist {
	width: 800px;
	padding: 20px;
}
.playlist > h1 {
	text-align: center;
	margin-bottom: 20px;
	text-shadow: 2px 2px 8px #fff;
}
.playlist--song {
	display: grid;
	grid-template-columns: 50% 50%;
	border-radius: 5px;
	padding: 10px;
	border-bottom: 1px solid rgba(240,240,240,0.2);
}
.playlist--song:hover {
	color: #fff;
	background-color: rgba(0,0,0,0.2);
}
.playlist--song:hover span {
	color: #fff;
}
.playlist--song_info {
	display: grid;
	grid-template-columns: 40px auto;
	column-gap: 10px;
}
.playlist--song_img {
	width: 40px;
	grid-row-start: 1;
    grid-row-end: 3;
	border-radius: 5px;
	cursor: pointer;
}
.playlist--song_title {
	font-weight: 600;
}
.playlist--song_singer {
	font-size: 0.8rem;
	color: rgb(83, 83, 83);
}
.playlist--song_album {
	display: flex;
	align-items: center;
	color: rgb(83, 83, 83);
}

/* Mobile display */
@media only screen and (max-width: 768px) {
	.playlist {
		width: 100%;
		padding: 10px;
	}

	/* player on mobile devices */
	.player {
		height: 100vh;
		display: flex;
		flex-direction: column;
	}
	.player #logo {
		left: 10px;
	}
	.player #logo span {
		margin-right: 10px;
	}
	/* left & right part */
	.right, .left {
		height: 100%;
		width: 80%;
	}

	.right input[type=range]{
		width: 60%;
	}

	/* volume part */
	.left .volume {
		bottom: 0;
	}

	/* right part */
	.right .middle {
		width: 80%;
		background-color: #2a2a2a;
		padding: 5px;
	}
	.right .duration {
		bottom: 42%;
	}
	.right .show_song_no {
		position: absolute;
		top: -97%;
		right: -9%;
	}
	.right #title {
		font-size: 30px;
		margin-bottom: 10px;
	}
	.right #artist {
		font-size: 15px;
	}

	/* visualiser */
	.visualizer-box {
		left: 50%;
		top: 45%;
		transform: translate(-60%, -41.5%);
	}
} 

